--- a/source/RaumkernelLib.vcxproj.filters
+++ b/source/RaumkernelLib.vcxproj.filters
@@ -99,9 +99,6 @@
     <ClInclude Include="includes\raumkernel\tools\dateUtil.h">
       <Filter>includes\raumkernel\tools</Filter>
     </ClInclude>
-    <ClInclude Include="includes\raumkernel\tools\stringUtil.h">
-      <Filter>includes\raumkernel\tools</Filter>
-    </ClInclude>
     <ClInclude Include="includes\raumkernel\exception\exception.h">
       <Filter>includes\raumkernel\exception</Filter>
     </ClInclude>
@@ -222,6 +219,15 @@
     <ClInclude Include="includes\raumkernel\httpclient\happyhttp.h">
       <Filter>includes\raumkernel\httpclient</Filter>
     </ClInclude>
+    <ClInclude Include="includes\raumkernel\manager\mediaListManager.h">
+      <Filter>includes\raumkernel\manager</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\tools\stringUtil.h">
+      <Filter>includes\raumkernel\tools</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\tools\numUtil.h">
+      <Filter>includes\raumkernel\tools</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="logger\logger.cpp">
@@ -328,6 +334,9 @@
     </ClCompile>
     <ClCompile Include="httpclient\happyhttp.cpp">
       <Filter>httpclient</Filter>
+    </ClCompile>
+    <ClCompile Include="manager\mediaListManager.cpp">
+      <Filter>manager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
