--- a/source/RaumkernelLib.vcxproj
+++ b/source/RaumkernelLib.vcxproj
@@ -124,6 +124,21 @@
     <ClInclude Include="includes\raumkernel\manager\settingsManager.h" />
     <ClInclude Include="includes\raumkernel\manager\upnpManager.h" />
     <ClInclude Include="includes\raumkernel\manager\zoneManager.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItems.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Album.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Artist.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Composer.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Container.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Genre.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_LineIn.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Playlist.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Radio.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_RhapsodyRadio.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Shuffle.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_StorageFolder.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_Track.h" />
+    <ClInclude Include="includes\raumkernel\media\item\mediaItem_TrackContainer.h" />
     <ClInclude Include="includes\raumkernel\os\os.h" />
     <ClInclude Include="includes\raumkernel\raumkernel.h" />
     <ClInclude Include="includes\raumkernel\raumkernelBase.h" />
@@ -182,6 +197,20 @@
     <ClCompile Include="manager\settingsManager.cpp" />
     <ClCompile Include="manager\upnpManager.cpp" />
     <ClCompile Include="manager\zoneManager.cpp" />
+    <ClCompile Include="media\item\mediaItem.cpp" />
+    <ClCompile Include="media\item\mediaItem_Album.cpp" />
+    <ClCompile Include="media\item\mediaItem_Artist.cpp" />
+    <ClCompile Include="media\item\mediaItem_Composer.cpp" />
+    <ClCompile Include="media\item\mediaItem_Container.cpp" />
+    <ClCompile Include="media\item\mediaItem_Genre.cpp" />
+    <ClCompile Include="media\item\mediaItem_LineIn.cpp" />
+    <ClCompile Include="media\item\mediaItem_Playlist.cpp" />
+    <ClCompile Include="media\item\mediaItem_Radio.cpp" />
+    <ClCompile Include="media\item\mediaItem_RhapsodyRadio.cpp" />
+    <ClCompile Include="media\item\mediaItem_Shuffle.cpp" />
+    <ClCompile Include="media\item\mediaItem_StorageFolder.cpp" />
+    <ClCompile Include="media\item\mediaItem_Track.cpp" />
+    <ClCompile Include="media\item\mediaItem_TrackContainer.cpp" />
     <ClCompile Include="raumkernel.cpp" />
     <ClCompile Include="raumkernelBase.cpp" />
     <ClCompile Include="raumkernelBaseMgr.cpp" />
