--- a/source/RaumkernelLib.vcxproj
+++ b/source/RaumkernelLib.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="includes\raumkernel\media\item\mediaItem_StorageFolder.h" />
     <ClInclude Include="includes\raumkernel\media\item\mediaItem_Track.h" />
     <ClInclude Include="includes\raumkernel\media\item\mediaItem_TrackContainer.h" />
+    <ClInclude Include="includes\raumkernel\media\mediaItemCreator.h" />
     <ClInclude Include="includes\raumkernel\os\os.h" />
     <ClInclude Include="includes\raumkernel\raumkernel.h" />
     <ClInclude Include="includes\raumkernel\raumkernelBase.h" />
@@ -211,6 +212,7 @@
     <ClCompile Include="media\item\mediaItem_StorageFolder.cpp" />
     <ClCompile Include="media\item\mediaItem_Track.cpp" />
     <ClCompile Include="media\item\mediaItem_TrackContainer.cpp" />
+    <ClCompile Include="media\mediaItemCreator.cpp" />
     <ClCompile Include="raumkernel.cpp" />
     <ClCompile Include="raumkernelBase.cpp" />
     <ClCompile Include="raumkernelBaseMgr.cpp" />
