--- a/source/makefile_linux_X86
+++ b/source/makefile_linux_X86
@@ -4,8 +4,8 @@ INCPATH = -I includes/
 
 CC = g++-4.9
 CXX = g++-4.9
-CFLAGS = -std=c++11 -fPIC -Wall -Wextra -O2 -c -pthread $(INCPATH)
-CXXFLAGS = -std=c++11 -fPIC -Wall -Wextra -O2 -c -pthread $(INCPATH)
+CFLAGS = -std=c++11 -fPIC -Wall -Wno-unknown-pragmas -Wextra -O2 -c -pthread $(INCPATH)
+CXXFLAGS = -std=c++11 -fPIC -Wall -Wno-unknown-pragmas -Wextra -O2 -c -pthread $(INCPATH)
 LDFLAGS = -shared -pthread -static-libgcc -static-libstdc++
 
 LIBSDEF =  libs/linux_x86/libohNetCore.a libs/linux_x86/libohNetDevices.a libs/linux_x86/libohNetProxies.a
