--- a/source/makefile_linux_ARMV7
+++ b/source/makefile_linux_ARMV7
@@ -4,8 +4,8 @@ INCPATH = -I includes/
 
 CC = arm-linux-gnueabihf-g++-4.8
 CXX = arm-linux-gnueabihf-g++-4.8
-CFLAGS = -std=c++0x -fPIC -Wall -Wno-unknown-pragmas -Wextra -O2 -c -pthread $(INCPATH)
-CXXFLAGS = -std=c++0x -fPIC -Wall -Wno-unknown-pragmas -Wextra -O2 -c -pthread $(INCPATH)
+CFLAGS = -std=c++0x -fPIC -Wall -Wno-unknown-pragmas -Wno-unknown-pragmas -Wno-unused-parameter -Wextra -O2 -c -pthread $(INCPATH)
+CXXFLAGS = -std=c++0x -fPIC -Wall -Wno-unknown-pragmas -Wno-unknown-pragmas -Wno-unused-parameter -Wextra -O2 -c -pthread $(INCPATH)
 LDFLAGS = -shared -pthread -static-libgcc -static-libstdc++
 
 LIBSDEF = libs/linux_ARMV7/libohNetCore.a libs/linux_ARMV7/libohNetDevices.a libs/linux_ARMV7/libohNetProxies.a
