--- a/source/RaumkernelLib.vcxproj.filters
+++ b/source/RaumkernelLib.vcxproj.filters
@@ -76,6 +76,15 @@
     <Filter Include="includes\raumkernel\media\item">
       <UniqueIdentifier>{c3b45b7f-6fe8-477b-b5e4-c6141fb7ddac}</UniqueIdentifier>
     </Filter>
+    <Filter Include="includes\raumkernel\xml\pugixml">
+      <UniqueIdentifier>{c0d9cd2d-0ace-4c38-9d99-777e1ab480b3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="xml">
+      <UniqueIdentifier>{8b1a4a98-e8c7-45fc-b51d-06c1510d35cf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="xml\pugixml">
+      <UniqueIdentifier>{0159f530-9a69-4fbe-9a92-dd6fab1e8e22}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\raumkernel\os\os.h">
@@ -131,18 +140,6 @@
     </ClInclude>
     <ClInclude Include="includes\raumkernel\raumkernelBaseMgr.h">
       <Filter>includes\raumkernel</Filter>
-    </ClInclude>
-    <ClInclude Include="includes\raumkernel\xml\rapidxml.hpp">
-      <Filter>includes\raumkernel\xml</Filter>
-    </ClInclude>
-    <ClInclude Include="includes\raumkernel\xml\rapidxml_iterators.hpp">
-      <Filter>includes\raumkernel\xml</Filter>
-    </ClInclude>
-    <ClInclude Include="includes\raumkernel\xml\rapidxml_print.hpp">
-      <Filter>includes\raumkernel\xml</Filter>
-    </ClInclude>
-    <ClInclude Include="includes\raumkernel\xml\rapidxml_utils.hpp">
-      <Filter>includes\raumkernel\xml</Filter>
     </ClInclude>
     <ClInclude Include="includes\raumkernel\manager\upnpManager.h">
       <Filter>includes\raumkernel\manager</Filter>
@@ -302,6 +299,12 @@
     </ClInclude>
     <ClInclude Include="includes\raumkernel\tools\versionInfo.h">
       <Filter>includes\raumkernel\tools</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\xml\pugixml\pugiconfig.hpp">
+      <Filter>includes\raumkernel\xml\pugixml</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\raumkernel\xml\pugixml\pugixml.hpp">
+      <Filter>includes\raumkernel\xml\pugixml</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -463,6 +466,9 @@
     </ClCompile>
     <ClCompile Include="media\mediaItemCreator.cpp">
       <Filter>media</Filter>
+    </ClCompile>
+    <ClCompile Include="xml\pugixml\pugixml.cpp">
+      <Filter>xml\pugixml</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
