--- a/source/makefile
+++ b/source/makefile
@@ -4,7 +4,7 @@ ifeq ($(arch),X64)
   ARCHITECTURE = -m64
   CC = g++-4.9
   CXX = g++-4.9
-  LIBSDEF =  libs/linux_x64/libohNetCore.a libs/linux_x64/libohNetDevices.a libs/linux_x64/libohNetProxies.a
+  LIBSPATH = libs/linux_x64/
   TARGET = libs/_tmpBuild/raumkernel.so
 endif
 	
@@ -12,7 +12,7 @@ ifeq ($(arch),X86)
   ARCHITECTURE = -m32 
   CC = g++-4.9
   CXX = g++-4.9
-  LIBSDEF =  libs/linux_x86/libohNetCore.a libs/linux_x86/libohNetDevices.a libs/linux_x86/libohNetProxies.a
+  LIBSPATH = libs/linux_x86/
   TARGET = libs/_tmpBuild/raumkernel.so
 endif
 
@@ -20,7 +20,7 @@ ifeq ($(arch),ARMA53)
   ARCHITECTURE = -march=armv8-a
   CC = arm-linux-gnueabihf-g++-4.9 
   CXX = arm-linux-gnueabihf-g++-4.9
-  LIBSDEF = libs/linux_ARMA53/libohNetCore.a libs/linux_ARMA53/libohNetDevices.a libs/linux_ARMA53/libohNetProxies.a
+  LIBSPATH = libs/linux_ARMA53/
   TARGET = libs/_tmpBuild/raumkernel.so
 endif
 
@@ -28,7 +28,7 @@ ifeq ($(arch),ARMV7HF)
   ARCHITECTURE = 
   CC = arm-linux-gnueabihf-g++-4.9 
   CXX = arm-linux-gnueabihf-g++-4.9
-  LIBSDEF = libs/linux_ARMV7/libohNetCore.a libs/linux_ARMV7/libohNetDevices.a libs/linux_ARMV7/libohNetProxies.a
+  LIBSPATH = libs/linux_ARMV7/
   TARGET = libs/_tmpBuild/raumkernel.so
 endif
 
@@ -36,10 +36,12 @@ ifeq ($(arch),ARMV6)
   ARCHITECTURE = -march=armv6
   CC = arm-linux-gnueabi-g++-4.9 
   CXX = arm-linux-gnueabi-g++-4.9
-  LIBSDEF = libs/linux_ARMV6/libohNetCore.a libs/linux_ARMV6/libohNetDevices.a libs/linux_ARMV6/libohNetProxies.a
+  LIBSPATH = libs/linux_ARMV6/
   TARGET = libs/_tmpBuild/raumkernel.so
 endif
 
+
+LIBSDEF =  $(LIBSPATH)libohNetCore.a $(LIBSPATH)libohNetDevices.a $(LIBSPATH)libohNetProxies.a
 
 DEBUG = 
 ifeq ($(dbg),1)
