--- a/source/makefile_test
+++ b/source/makefile_test
@@ -4,7 +4,7 @@ ifeq ($(arch),X64)
   ARCHITECTURE = -m64
   CC = g++-4.9
   CXX = g++-4.9
-  LIBSDEF =  libs/linux_x64/raumkernel.so
+  LIBSPATH = libs/linux_x64/
   TARGET = testX64
 endif
 	
@@ -12,7 +12,7 @@ ifeq ($(arch),X86)
   ARCHITECTURE = -m32 
   CC = g++-4.9
   CXX = g++-4.9
-  LIBSDEF =  libs/linux_x86/raumkernel.so
+  LIBSPATH = libs/linux_x86/
   TARGET = testX86
 endif
 
@@ -20,7 +20,7 @@ ifeq ($(arch),ARMA53)
   ARCHITECTURE = -march=armv8-a
   CC = arm-linux-gnueabihf-g++-4.9 
   CXX = arm-linux-gnueabihf-g++-4.9
-  LIBSDEF = libs/linux_ARMA53/raumkernel.so
+  LIBSPATH = libs/linux_ARMA53/
   TARGET = testARMA53
 endif
 
@@ -28,7 +28,7 @@ ifeq ($(arch),ARMV7HF)
   ARCHITECTURE = 
   CC = arm-linux-gnueabihf-g++-4.9 
   CXX = arm-linux-gnueabihf-g++-4.9
-  LIBSDEF = libs/linux_ARMV7/raumkernel.so
+  LIBSPATH = libs/linux_ARMV7/
   TARGET = testARMV7HF
 endif
 
@@ -36,9 +36,11 @@ ifeq ($(arch),ARMV6)
   ARCHITECTURE = -march=armv6
   CC = arm-linux-gnueabi-g++-4.9 
   CXX = arm-linux-gnueabi-g++-4.9
-  LIBSDEF = libs/linux_ARMV6/raumkernel.so
+  LIBSPATH = libs/linux_ARMV6/
   TARGET = testARMV6
 endif
+
+LIBSDEF =  $(LIBSPATH)raumkernel.so
 
 
 DEBUG = 
