--- a/source/makefile
+++ b/source/makefile
@@ -40,6 +40,14 @@ ifeq ($(arch),ARMV6)
   TARGET = libs/_tmpBuild/raumkernel.so
 endif
 
+ifeq ($(arch),ARMV5TE)
+  ARCHITECTURE = -march=armv5te -mtune=xscale
+  CC = arm-linux-gnueabi-g++-4.9 
+  CXX = arm-linux-gnueabi-g++-4.9
+  LIBSPATH = libs/linux_ARMV5/
+  TARGET = libs/_tmpBuild/raumkernel.so
+endif 
+
 
 LIBSDEF =  $(LIBSPATH)libohNetCore.a $(LIBSPATH)libohNetDevices.a $(LIBSPATH)libohNetProxies.a
 
