--- a/source/makefile_test
+++ b/source/makefile_test
@@ -48,6 +48,14 @@ ifeq ($(arch),ARMV5TE)
   TARGET = testARMV5TE
 endif 
 
+ifeq ($(arch),AMDGEODE)
+  ARCHITECTURE = -m32 -march=geode -mtune=generic
+  CC = arm-linux-gnueabi-g++-4.9 
+  CXX = arm-linux-gnueabi-g++-4.9
+  LIBSPATH = libs/linux_AMDGEODE/
+  TARGET = libs/_tmpBuild/raumkernel.so
+endif 
+
 LIBSDEF =  $(LIBSPATH)raumkernel.so
 
 
