--- a/source/RaumkernelLib.vcxproj.filters
+++ b/source/RaumkernelLib.vcxproj.filters
@@ -478,9 +478,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="raumkernel.xml" />
+    <None Include="..\README.md" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\README.md" />
+    <Xml Include="settings.xml" />
   </ItemGroup>
 </Project>
